--- a/PokeStar/PokeStar/packages.config
+++ b/PokeStar/PokeStar/packages.config
@@ -1,31 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Discord.Net" version="3.0.0-dev-20210617.3" targetFramework="net472" />
-  <package id="Discord.Net.Commands" version="3.0.0-dev-20210617.3" targetFramework="net472" />
-  <package id="Discord.Net.Core" version="3.0.0-dev-20210617.3" targetFramework="net472" />
-  <package id="Discord.Net.Rest" version="3.0.0-dev-20210617.3" targetFramework="net472" />
-  <package id="Discord.Net.Webhook" version="3.0.0-dev-20210617.3" targetFramework="net472" />
-  <package id="Discord.Net.WebSocket" version="3.0.0-dev-20210617.3" targetFramework="net472" />
+  <package id="Discord.Net" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.Commands" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.Core" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.Interactions" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.Rest" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.Webhook" version="3.1.0" targetFramework="net472" />
+  <package id="Discord.Net.WebSocket" version="3.1.0" targetFramework="net472" />
   <package id="DuoVia.FuzzyStrings" version="2.1.0" targetFramework="net472" />
-  <package id="HtmlAgilityPack" version="1.11.34" targetFramework="net472" />
-  <package id="Humanizer.Core" version="2.11.10" targetFramework="net472" />
-  <package id="ICSharpCode.Decompiler" version="7.1.0.6543" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="HtmlAgilityPack" version="1.11.39" targetFramework="net472" />
+  <package id="Humanizer.Core" version="2.13.14" targetFramework="net472" />
+  <package id="ICSharpCode.Decompiler" version="7.2.0.6791-preview3" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="6.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
-  <package id="System.Data.SqlClient" version="4.8.2" targetFramework="net472" />
-  <package id="System.Drawing.Common" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
-  <package id="System.Interactive.Async" version="5.0.0" targetFramework="net472" />
-  <package id="System.Linq.Async" version="5.0.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.3" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
+  <package id="System.Interactive.Async" version="5.1.0" targetFramework="net472" />
+  <package id="System.Linq.Async" version="5.1.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Reflection.Metadata" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.5.21301.5" targetFramework="net472" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="6.0.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Tesseract" version="4.1.1" targetFramework="net472" />
-  <package id="Tesseract.Net.SDK" version="1.19.342" targetFramework="net472" />
+  <package id="Tesseract.Net.SDK" version="4.2.411" targetFramework="net472" />
 </packages>
