--- a/PokeStar/PokeStar/PokeStar.csproj
+++ b/PokeStar/PokeStar/PokeStar.csproj
@@ -36,7 +36,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;COMPONENTS;DROP_DOWNS;SLASH</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;COMPONENTS;DROP_DOWNS;EPHEMERAL;SLASH</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>
